# jira-api

./: .gitignore  pyproject.toml  readme.md
src/: example.env  logging.conf
src/alembic/: env.py
src/alembic/versions/: 4add3279b475_init_migration.py  e847c20f2122_add_user_roles.py
src/app/: config.py  enums.py  mail_service.py  main.py  schemas.py  services.py  user_manager.py
src/app/api/: auth.py  deps.py  endpoints.py
src/app/db/: base.py  base_class.py  init_db.py  models.py  session.py  types.py
